--- a/Reporte/package.json
+++ b/Reporte/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/joy": "^5.0.0-beta.5",
     "@mui/material": "^5.14.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
