Se construyo la app x8

--- a/Reporte/vercel.json
+++ b/Reporte/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/assets/(.png)", "dest": "/assets/$1" },
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
     {
       "src": ".*",
       "dest": "/dist/index.html"
