--- a/Reporte/package.json
+++ b/Reporte/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://sponkurtus2.github.io/Reportes_Addai",
   "name": "reporte",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -26,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.15.0",
     "vite": "^4.4.5"
   }
