Subir a githubb ahora yes

--- a/Reporte/package.json
+++ b/Reporte/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sponkurtus2.github.io/Reportes_Addai",
+  "homepage": "https://sponkurtus2.github.io/Reportes_Addai/",
   "name": "reporte",
   "private": true,
   "version": "0.0.0",
